--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@fontsource/libre-baskerville": "^5.1.1",
     "cra-template": "1.2.0",
+    "masonry-layout": "^4.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
